--- a/FactoryDefence/Assembly-CSharp.csproj
+++ b/FactoryDefence/Assembly-CSharp.csproj
@@ -49,7 +49,8 @@
      <Compile Include="Assets\Scripts\Characters\EnemyToys\EnemyToy00.cs" />
      <Compile Include="Assets\Scripts\Characters\PresentToys\PlayerToy00.cs" />
      <Compile Include="Assets\Scripts\Common\BaseCharacter.cs" />
-     <Compile Include="Assets\Scripts\ConveyorOnTheObjects.cs" />
+     <Compile Include="Assets\Scripts\Conveyor.cs" />
+     <Compile Include="Assets\Scripts\Data\CharacterStatusData.cs" />
      <Compile Include="Assets\Scripts\EnemyGenerator.cs" />
      <Compile Include="Assets\Scripts\FactoryMachines\BoxGenerator.cs" />
      <Compile Include="Assets\Scripts\FactoryMachines\FactoryMachine.cs" />
